Added functionality to get Locale file

--- a/Lingual/Lingual/Lingual.csproj
+++ b/Lingual/Lingual/Lingual.csproj
@@ -46,6 +46,9 @@
     <Compile Include="LocaleEnum.cs" />
     <Compile Include="TranslationHash.cs" />
     <Compile Include="TranslationNode.cs" />
+
+    <Compile Include="Handlers\LocaleFileHandler.cs" />
+
     <Compile Include="TranslationUtility.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
