--- a/Lingual/Lingual.Tests/Lingual.Tests.csproj
+++ b/Lingual/Lingual.Tests/Lingual.Tests.csproj
@@ -61,7 +61,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UTest.cs" />
+    <Compile Include="TranslatorUtilityTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
