Fix the merge conflicts from TranslatorUtilityTests and TranslatoryUtility

--- a/Lingual/Lingual.Tests/Lingual.Tests.csproj
+++ b/Lingual/Lingual.Tests/Lingual.Tests.csproj
@@ -35,6 +35,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Lingual">
+      <HintPath>..\Lingual\bin\Debug\Lingual.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Newtonsoft.Json.6.0.5\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -66,12 +69,6 @@
     <None Include="Locale\es.json" />
     <None Include="Locale\pt.json" />
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Lingual\Lingual.csproj">
-      <Project>{69147b5d-0ec6-4643-9f00-fc1bbd9fb700}</Project>
-      <Name>Lingual</Name>
-    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
