--- a/Lingual/Lingual.Test/Lingual.Test.csproj
+++ b/Lingual/Lingual.Test/Lingual.Test.csproj
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Lingual, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Lingual\bin\Debug\Lingual.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework">
       <HintPath>..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
     </Reference>
@@ -48,6 +52,7 @@
   <ItemGroup>
     <None Include="Locale\de-de.json" />
     <None Include="Locale\en-us.json" />
+    <None Include="Locale\en.json" />
     <None Include="Locale\es-mx.json" />
     <None Include="Locale\pt-pt.json" />
     <None Include="packages.config" />
@@ -59,10 +64,6 @@
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Lingual\Lingual.csproj">
-      <Project>{69147b5d-0ec6-4643-9f00-fc1bbd9fb700}</Project>
-      <Name>Lingual</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Lingual\Lingual.csproj">
       <Project>{69147b5d-0ec6-4643-9f00-fc1bbd9fb700}</Project>
       <Name>Lingual</Name>
