--- a/Lingual/Lingual/Lingual.csproj
+++ b/Lingual/Lingual/Lingual.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -30,10 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Newtonsoft.Json.6.0.5\lib\net40\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="nunit.framework">
       <HintPath>..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
     </Reference>
@@ -44,17 +40,20 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.6.0.5\lib\net40\Newtonsoft.Json.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Enums\Locale.cs" />
-    <Compile Include="Enums\Plurality.cs" />
-    <Compile Include="ILocaleTranslation.cs" />
     <Compile Include="ITranslator.cs" />
-    <Compile Include="LocaleTranslations.cs" />
-    <Compile Include="Handlers\LocaleFileHandler.cs" />
-    <Compile Include="NullLocaleTranslations.cs" />
     <Compile Include="Translator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Locale.cs" />
+    <Compile Include="Infrastructure\LocaleFileLoader.cs" />
+    <Compile Include="Infrastructure\NullTranslationLookup.cs" />
+    <Compile Include="Infrastructure\ITranslationLookup.cs" />
+    <Compile Include="Plurality.cs" />
+    <Compile Include="Infrastructure\TranslationLookup.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
