--- a/Lingual/Lingual/Lingual.nuspec
+++ b/Lingual/Lingual/Lingual.nuspec
@@ -1,9 +1,9 @@
 <?xml version="1.0"?>
 <package >
   <metadata>
-    <id>$id$</id>
-    <version>$version$</version>
-    <title>$title$</title>
+    <id>Lingual</id>
+    <version>1.1.0.0</version>
+    <title>Lingual</title>
     <authors>Nuvi</authors>
     <owners>Nuvi</owners>
     <licenseUrl>http://www.nuvi.com</licenseUrl>
@@ -11,8 +11,12 @@
     <iconUrl>http://www.nuvi.com/images/Layout/small-owl.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>i18n Platform built by Nuvi</description>
-    <releaseNotes>Initial release of Lingual to the public</releaseNotes>
+    <releaseNotes>Use anonymous objects instead of Dictionary(string,string)</releaseNotes>
     <copyright>Copyright 2014</copyright>
     <tags>i18n Nuvi</tags>
   </metadata>
+  <files>
+    <file src="bin/Release/Lingual.dll" target="lib/Net40"/>
+    <file src="bin/Release/Lingual.dll.mdb" target="lib/Net40"/>
+  </files>
 </package>
