Some refactoring/reorganization

--- a/Lingual/Lingual.csproj
+++ b/Lingual/Lingual.csproj
@@ -8,6 +8,8 @@
     <RootNamespace>Lingual</RootNamespace>
     <AssemblyName>Lingual</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <ProductVersion>12.0.0</ProductVersion>
+    <SchemaVersion>2.0</SchemaVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -32,6 +34,7 @@
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\packages\Newtonsoft.Json.6.0.6\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -39,6 +42,7 @@
     <Compile Include="Infrastructure\CultureTranslator.cs" />
     <Compile Include="Infrastructure\SafelyExtensions.cs" />
     <Compile Include="Plurality.cs" />
+    <Compile Include="LocaleFileLoader.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
