Renaming and null-safety

--- a/Lingual/Lingual.csproj
+++ b/Lingual/Lingual.csproj
@@ -8,8 +8,6 @@
     <RootNamespace>Lingual</RootNamespace>
     <AssemblyName>Lingual</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <ProductVersion>12.0.0</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -42,7 +40,7 @@
     <Compile Include="Infrastructure\CultureTranslator.cs" />
     <Compile Include="Infrastructure\SafelyExtensions.cs" />
     <Compile Include="Plurality.cs" />
-    <Compile Include="LocaleFileLoader.cs" />
+    <Compile Include="LocaleDirectoryLoader.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
