--- a/Lingual/Lingual.nuspec
+++ b/Lingual/Lingual.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>Lingual</id>
-    <version>1.2.0.0</version>
+    <version>1.3.0.0</version>
     <title>Lingual</title>
     <authors>Nuvi</authors>
     <owners>Nuvi</owners>
@@ -11,12 +11,15 @@
     <iconUrl>http://www.nuvi.com/images/Layout/small-owl.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>i18n Platform built by Nuvi</description>
-    <releaseNotes>Rewrite</releaseNotes>
-    <copyright>Copyright 2014</copyright>
+    <releaseNotes>Forgot to add Newtonsoft.Json dependency</releaseNotes>
+    <copyright>Copyright 2014-2015</copyright>
     <tags>i18n Nuvi</tags>
   </metadata>
   <files>
     <file src="bin/Release/Lingual.dll" target="lib/Net40"/>
     <file src="bin/Release/Lingual.dll.mdb" target="lib/Net40"/>
   </files>
+  <dependencies>
+    <dependency id="Newtonsoft.Json" version="6.0.0" />
+  </dependencies>
 </package>
