--- a/Lingual/Lingual.nuspec
+++ b/Lingual/Lingual.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>Lingual</id>
-    <version>1.3.3.1</version>
+    <version>1.3.4</version>
     <title>Lingual</title>
     <authors>Nuvi</authors>
     <owners>Nuvi</owners>
@@ -11,7 +11,7 @@
     <iconUrl>http://www.nuvi.com/images/Layout/small-owl.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>i18n Platform built by Nuvi</description>
-    <releaseNotes>Retargeting .NET 4.0</releaseNotes>
+    <releaseNotes>Ignore invalid files in the locale directory</releaseNotes>
     <copyright>Copyright 2014-2015</copyright>
     <tags>i18n Nuvi</tags>
     <dependencies>
